// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Customers should render component when loading 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
      <section
        class="el-page-container"
      >
        <h1
          class="el-title"
        >
          Customers
        </h1>
        <form>
          <div
            class="el-mb11 el-form-layout"
          >
            <div
              class="el-input-wrap"
            >
              <div
                class="el-input-group"
              >
                <input
                  class="el-input"
                  id="test-static-id"
                  name="name"
                  type="search"
                />
                <label
                  class="el-label"
                  for="test-static-id"
                >
                  Customer Name
                </label>
              </div>
            </div>
            <div
              class="el-input-wrap"
            >
              <div
                class="el-input-group"
              >
                <input
                  class="el-input"
                  id="test-static-id"
                  name="agencyCloudId"
                  type="search"
                />
                <label
                  class="el-label"
                  for="test-static-id"
                >
                  Customer Code
                </label>
              </div>
            </div>
          </div>
        </form>
        <div
          class="el-loader-container"
        >
          <div
            class="el-loader"
          >
            <div
              class="el-loader-moving-bar"
            />
          </div>
        </div>
      </section>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <section
      class="el-page-container"
    >
      <h1
        class="el-title"
      >
        Customers
      </h1>
      <form>
        <div
          class="el-mb11 el-form-layout"
        >
          <div
            class="el-input-wrap"
          >
            <div
              class="el-input-group"
            >
              <input
                class="el-input"
                id="test-static-id"
                name="name"
                type="search"
              />
              <label
                class="el-label"
                for="test-static-id"
              >
                Customer Name
              </label>
            </div>
          </div>
          <div
            class="el-input-wrap"
          >
            <div
              class="el-input-group"
            >
              <input
                class="el-input"
                id="test-static-id"
                name="agencyCloudId"
                type="search"
              />
              <label
                class="el-label"
                for="test-static-id"
              >
                Customer Code
              </label>
            </div>
          </div>
        </div>
      </form>
      <div
        class="el-loader-container"
      >
        <div
          class="el-loader"
        >
          <div
            class="el-loader-moving-bar"
          />
        </div>
      </div>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Customers should render component with data 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
      <section
        class="el-page-container"
      >
        <h1
          class="el-title"
        >
          Customers
        </h1>
        <form>
          <div
            class="el-mb11 el-form-layout"
          >
            <div
              class="el-input-wrap"
            >
              <div
                class="el-input-group"
              >
                <input
                  class="el-input"
                  id="test-static-id"
                  name="name"
                  type="search"
                />
                <label
                  class="el-label"
                  for="test-static-id"
                >
                  Customer Name
                </label>
              </div>
            </div>
            <div
              class="el-input-wrap"
            >
              <div
                class="el-input-group"
              >
                <input
                  class="el-input"
                  id="test-static-id"
                  name="agencyCloudId"
                  type="search"
                />
                <label
                  class="el-label"
                  for="test-static-id"
                >
                  Customer Code
                </label>
              </div>
            </div>
          </div>
        </form>
        <div
          class="el-mb11 el-table"
          data-has-call-to-action="false"
          data-has-expandable-action="true"
          data-num-columns-excl-action-col="5"
        >
          <div
            class="el-table-headers-row"
          >
            <div
              class="el-table-header"
            >
              Customer Name
            </div>
            <div
              class="el-table-header"
            >
              Agency Cloud Id
            </div>
            <div
              class="el-table-header"
            >
              Customer Id
            </div>
            <div
              class="el-table-header"
            >
              Customer Billing Reference
            </div>
            <div
              class="el-table-header"
            >
              Customer Address
            </div>
            <div
              class="el-table-header"
            >
              <span
                class="el-icon"
                style="font-size: 1.2rem;"
              >
                <svg />
              </span>
            </div>
          </div>
          <div
            class="el-table-row-container"
          >
            <div
              class="el-table-row"
            >
              <div
                class="el-table-cell-has-dark-text el-table-cell"
              >
                <span
                  class="el-intent-secondary el-icon"
                >
                  <svg />
                </span>
                <div
                  class="el-table-cell-content"
                  data-narrow-label="Customer Name"
                >
                  Reapit Sales
                </div>
              </div>
              <div
                class="el-table-cell-has-dark-text el-table-cell"
              >
                <div
                  class="el-table-cell-content"
                  data-narrow-label="Agency Cloud Id"
                >
                  RES
                </div>
              </div>
              <div
                class="el-table-cell"
              >
                <div
                  class="el-table-cell-content"
                  data-narrow-label="Customer Id"
                >
                  201a8d35-f682-41a8-95ed-079133e4b517
                </div>
              </div>
              <div
                class="el-table-cell"
              >
                <div
                  class="el-table-cell-content"
                  data-narrow-label="Customer Billing Reference"
                >
                  HJP000
                </div>
              </div>
              <div
                class="el-table-cell"
              >
                <div
                  class="el-table-cell-content"
                  data-narrow-label="Customer Address"
                >
                  5 Radcliffe House Blenheim Court Solihull solihull B91 2AA
                </div>
              </div>
              <div
                class="el-table-expandable-row-trigger-cell"
              >
                <span
                  class="el-intent-secondary el-icon"
                >
                  <svg />
                </span>
              </div>
            </div>
            <div
              class="el-table-expandable-row"
            >
              <div
                class="el-table-expandable-container"
              >
                <div
                  class="el-button-group"
                >
                  <div
                    class="el-button-group-align-center el-button-group-inner"
                  >
                    <button
                      class="el-intent-secondary el-button"
                    >
                      Fetch Office Groups
                      <div
                        class="el-button-loader"
                      />
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="el-pagination-wrap"
        >
          <div
            class="el-pagination-text"
          >
            <input
              class="el-pagination-input"
              value="1"
            />
             of 
            1
          </div>
          <button
            class="el-pagination-button"
            data-testid="back-button"
            type="button"
          >
            <span
              class="el-icon"
            >
              <svg />
            </span>
          </button>
          <button
            class="el-pagination-button"
            data-testid="forward-button"
            type="button"
          >
            <span
              class="el-icon"
            >
              <svg />
            </span>
          </button>
        </div>
      </section>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <section
      class="el-page-container"
    >
      <h1
        class="el-title"
      >
        Customers
      </h1>
      <form>
        <div
          class="el-mb11 el-form-layout"
        >
          <div
            class="el-input-wrap"
          >
            <div
              class="el-input-group"
            >
              <input
                class="el-input"
                id="test-static-id"
                name="name"
                type="search"
              />
              <label
                class="el-label"
                for="test-static-id"
              >
                Customer Name
              </label>
            </div>
          </div>
          <div
            class="el-input-wrap"
          >
            <div
              class="el-input-group"
            >
              <input
                class="el-input"
                id="test-static-id"
                name="agencyCloudId"
                type="search"
              />
              <label
                class="el-label"
                for="test-static-id"
              >
                Customer Code
              </label>
            </div>
          </div>
        </div>
      </form>
      <div
        class="el-mb11 el-table"
        data-has-call-to-action="false"
        data-has-expandable-action="true"
        data-num-columns-excl-action-col="5"
      >
        <div
          class="el-table-headers-row"
        >
          <div
            class="el-table-header"
          >
            Customer Name
          </div>
          <div
            class="el-table-header"
          >
            Agency Cloud Id
          </div>
          <div
            class="el-table-header"
          >
            Customer Id
          </div>
          <div
            class="el-table-header"
          >
            Customer Billing Reference
          </div>
          <div
            class="el-table-header"
          >
            Customer Address
          </div>
          <div
            class="el-table-header"
          >
            <span
              class="el-icon"
              style="font-size: 1.2rem;"
            >
              <svg />
            </span>
          </div>
        </div>
        <div
          class="el-table-row-container"
        >
          <div
            class="el-table-row"
          >
            <div
              class="el-table-cell-has-dark-text el-table-cell"
            >
              <span
                class="el-intent-secondary el-icon"
              >
                <svg />
              </span>
              <div
                class="el-table-cell-content"
                data-narrow-label="Customer Name"
              >
                Reapit Sales
              </div>
            </div>
            <div
              class="el-table-cell-has-dark-text el-table-cell"
            >
              <div
                class="el-table-cell-content"
                data-narrow-label="Agency Cloud Id"
              >
                RES
              </div>
            </div>
            <div
              class="el-table-cell"
            >
              <div
                class="el-table-cell-content"
                data-narrow-label="Customer Id"
              >
                201a8d35-f682-41a8-95ed-079133e4b517
              </div>
            </div>
            <div
              class="el-table-cell"
            >
              <div
                class="el-table-cell-content"
                data-narrow-label="Customer Billing Reference"
              >
                HJP000
              </div>
            </div>
            <div
              class="el-table-cell"
            >
              <div
                class="el-table-cell-content"
                data-narrow-label="Customer Address"
              >
                5 Radcliffe House Blenheim Court Solihull solihull B91 2AA
              </div>
            </div>
            <div
              class="el-table-expandable-row-trigger-cell"
            >
              <span
                class="el-intent-secondary el-icon"
              >
                <svg />
              </span>
            </div>
          </div>
          <div
            class="el-table-expandable-row"
          >
            <div
              class="el-table-expandable-container"
            >
              <div
                class="el-button-group"
              >
                <div
                  class="el-button-group-align-center el-button-group-inner"
                >
                  <button
                    class="el-intent-secondary el-button"
                  >
                    Fetch Office Groups
                    <div
                      class="el-button-loader"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="el-pagination-wrap"
      >
        <div
          class="el-pagination-text"
        >
          <input
            class="el-pagination-input"
            value="1"
          />
           of 
          1
        </div>
        <button
          class="el-pagination-button"
          data-testid="back-button"
          type="button"
        >
          <span
            class="el-icon"
          >
            <svg />
          </span>
        </button>
        <button
          class="el-pagination-button"
          data-testid="forward-button"
          type="button"
        >
          <span
            class="el-icon"
          >
            <svg />
          </span>
        </button>
      </div>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
